// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connection initalization 1`] = `"dynamo db connection is not initialized"`;

exports[`convertEventToDynamo 1`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "type|1970-01-15",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "test": Object {
    "S": "test",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertEventToDynamo 2`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "CommitPrice|1970-01-15",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "sender": Object {
    "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertTradeToDynamo 1`] = `
Object {
  "amount": Object {
    "N": "456",
  },
  "price": Object {
    "N": "123",
  },
  "quoteBaseId": Object {
    "S": "quote|base|id",
  },
  "systime": Object {
    "N": "123",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
}
`;

exports[`convertTradeToDynamo 2`] = `
Object {
  "price": Object {
    "N": "123",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
  "volume": Object {
    "N": "456",
  },
}
`;

exports[`insertEventsData 1`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "type|1970-01-15",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "systime": Object {
      "N": "0",
    },
    "test": Object {
      "S": "test",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertEventsData 2`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "CommitPrice|1970-01-15",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "sender": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertHeartbeat 1`] = `
Object {
  "Item": Object {
    "process": Object {
      "S": "UNKNOWN",
    },
    "timestamp": Object {
      "N": "0",
    },
  },
  "TableName": "duo.status.dev",
}
`;

exports[`insertStatusData 1`] = `
Object {
  "Item": Object {
    "process": Object {
      "S": "UNKNOWN",
    },
    "test": "test",
  },
  "TableName": "duo.status.dev",
}
`;

exports[`insertTradeData 1`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "price": Object {
      "N": "123",
    },
    "quoteBaseId": Object {
      "S": "quote|base|id",
    },
    "sourceDateHourMinute": Object {
      "S": "src|1970-01-15-06-56",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "duo.trades.dev",
}
`;

exports[`insertTradeData 2`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "price": Object {
      "N": "123",
    },
    "process": Object {
      "S": "UNKNOWN",
    },
    "quoteBaseId": Object {
      "S": "quote|base|id",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "duo.status.dev",
}
`;

exports[`readTradeData 1`] = `
Array [
  Object {
    "amount": 1.181,
    "base": "ETH",
    "id": "35260767",
    "price": 573,
    "quote": "USD",
    "source": "GDAX",
    "timestamp": 1527832447254,
  },
  Object {
    "amount": 0.48160278,
    "base": "ETH",
    "id": "35260768",
    "price": 572.99,
    "quote": "USD",
    "source": "GDAX",
    "timestamp": 1527832455335,
  },
  Object {
    "amount": 0.0501,
    "base": "ETH",
    "id": "35260769",
    "price": 573,
    "quote": "USD",
    "source": "GDAX",
    "timestamp": 1527832458221,
  },
  Object {
    "amount": 0.2845,
    "base": "ETH",
    "id": "35260770",
    "price": 573,
    "quote": "USD",
    "source": "GDAX",
    "timestamp": 1527832490925,
  },
]
`;

exports[`readTradeData 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHourMinute": Object {
      "S": "source|datetime",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute",
  "TableName": "duo.trades.dev",
}
`;
